--- a/page1.html
+++ b/page1.html
@@ -20,6 +20,7 @@
                     <h2 class="nom">Pero queria aprovechar la ocacion para decir lo que siento</h2>
                     <h2 class="nom">Me pareces un chico muy guapo e inteligente, no se que pienses pero me gustaria conocerte mas en persona pero no me atrevo a hablar en la uni o cuando estamos cerca</h2>
                     <h2 class="nom">Espero no incomodarte con esto, simplemente queria decirlo y que sepas mi secreto y espero que lo guardes <3</h2>
+                    <h2 class="nom1">RXMgYnJvbWE=</h2>
                     <a href="./heart.html">Abreme</a>
                   </div>
             </div>
